Remove bunch of hacks/legacy from our build
- remove compiler hacks
- remove now unneeded compiler configuration
- remove forks
- remove maven replacer plugin
- update few plugins